Opened 12 years ago
Closed 12 years ago
#3412 closed defect (fixed)
h264 gray decoding failure
| Reported by: | Carl Eugen Hoyos | Owned by: | |
|---|---|---|---|
| Priority: | minor | Component: | avcodec |
| Version: | git-master | Keywords: | h264 |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
Output has green macroblocks, not a regression.
$ ffmpeg -flags +gray -i fate-suite/h264/interlaced_crop.mp4 -qscale 2 out.avi
ffmpeg version N-60871-g2a3cb1c Copyright (c) 2000-2014 the FFmpeg developers
built on Feb 24 2014 11:17:11 with gcc 4.7 (SUSE Linux)
configuration: --enable-gray
libavutil 52. 66.100 / 52. 66.100
libavcodec 55. 52.102 / 55. 52.102
libavformat 55. 33.100 / 55. 33.100
libavdevice 55. 10.100 / 55. 10.100
libavfilter 4. 1.103 / 4. 1.103
libswscale 2. 5.101 / 2. 5.101
libswresample 0. 18.100 / 0. 18.100
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'fate-suite/h264/interlaced_crop.mp4':
Metadata:
major_brand : avc1
minor_version : 0
compatible_brands: isomavc1
creation_time : 2010-10-07 15:03:51
Duration: 00:00:05.04, start: 0.000000, bitrate: 551 kb/s
Stream #0:0(und): Video: h264 (Main) (avc1 / 0x31637661), yuv420p, 640x360 [SAR 1:1 DAR 16:9], 547 kb/s, 25 fps, 25 tbr, 25 tbn, 50 tbc (default)
Metadata:
creation_time : 2010-10-07 15:03:51
handler_name : GPAC ISO Video Handler
Please use -q:a or -q:v, -qscale is ambiguous
Output #0, avi, to 'out.avi':
Metadata:
major_brand : avc1
minor_version : 0
compatible_brands: isomavc1
ISFT : Lavf55.33.100
Stream #0:0(und): Video: mpeg4 (FMP4 / 0x34504D46), yuv420p, 640x360 [SAR 1:1 DAR 16:9], q=2-31, 200 kb/s, 25 tbn, 25 tbc (default)
Metadata:
creation_time : 2010-10-07 15:03:51
handler_name : GPAC ISO Video Handler
Stream mapping:
Stream #0:0 -> #0:0 (h264 -> mpeg4)
Press [q] to stop, [?] for help
frame= 126 fps=0.0 q=2.0 Lsize= 2926kB time=00:00:05.04 bitrate=4755.8kbits/s
video:2917kB audio:0kB subtitle:0 data:0 global headers:0kB muxing overhead 0.296020%
Change History (1)
comment:1 by , 12 years ago
| Reproduced by developer: | set |
|---|---|
| Resolution: | → fixed |
| Status: | new → closed |
Note:
See TracTickets
for help on using tickets.



Fixed in 94f60b65446b37132d7bd644ab2c4627d9488295