avcodec/h264_mb: fix grayscale only decoding with weighted prediction

Fixes Ticket3412

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>